# metaspn-gates

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
metaspn_gates/: __init__.py  applier.py  config.py  evaluator.py  explain.py  learning.py  models.py  schemas.py
tests/: test_demo.py  test_gates.py  test_learning.py  test_tokens.py
tests/fixtures/: demo_state_machine_config.json  m0_state_machine_config.json  m1_routing_state_machine_config.json  m2_recommendation_state_machine_config.json  token_health_state_machine_config.json
